--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,8 @@ header {
     background: -webkit-linear-gradient(to left, #f46b45 , #eea849);
     background: linear-gradient(to left, #f46b45 , #eea849);
 
-    border-bottom: 1px solid #f46b45;
-    box-shadow: inset 0px -1px 1px rgba(255,255,255,0.5);
+    /*border-bottom: 1px solid #f46b45;*/
+    /*box-shadow: inset 0px -1px 1px rgba(255,255,255,0.5);*/
     color: #fff;
 }
 
@@ -52,7 +52,7 @@ header .title {
     top: 0;
     left: 0;
     margin: 8px 20px;
-    text-shadow: 0px 1px 1px #f46b45;
+    /*text-shadow: 0px 1px 1px #f46b45;*/
 }
 
 header nav {
@@ -147,8 +147,9 @@ input:focus {
 
 button {
     background: #fff;
-    border: 1px solid #bbb;
-    border-radius: 10px;
+    border: none;
+    border-radius: 0px;
+    box-shadow: 0px 1px 2px #999;
     color: #333;
 }
 
